tests/valid/functions_and_loops.c
int add(int a, int b) {
    return a + b;
}

void run() {
    int limit = 0;
    input limit;
    int sum = 0;
    for (int i = 0; i < limit; i = i + 1) {
        sum = add(sum, i);
    }
    output sum;
}
