tests/invalid/semantic_function_mismatch.c
int add(int a, int b) {
    return a + b;
}

void run() {
    int x = add(1);
}
